new resolutions of images

--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
           <source media="(max-width: 565px)" srcset="http://via.placeholder.com/560x190">
           <source media="(max-width: 640px)" srcset="http://via.placeholder.com/300x170">
           <source media="(max-width: 700px)" srcset="http://via.placeholder.com/390x200">
-          <img src="http://via.placeholder.com/300x200" alt="">
+          <img src="http://via.placeholder.com/300x200" alt="image">
         </picture>
         
-        <h1><a href="http://animals.pkopy.pl" target="_blank">WIDGETS</a></h1>
+        <h1><a href="#">WIDGETS</a></h1>
       </section>
       <section class="small__image" id="center">
         <picture>
-          <source media="(max-width: 400px)" srcset="img/animals__390x220.png">
-          <source media="(max-width: 450px)" srcset="img/animals__450x220.png">
-          <source media="(max-width: 565px)" srcset="img/animals__560x220.png">
-          <source media="(max-width: 700px)" srcset="img/animals__700x250.png">
+          <source media="(max-width: 400px)" srcset="img/animals__390x190.png">
+          <source media="(max-width: 450px)" srcset="img/animals__450x190.png">
+          <source media="(max-width: 565px)" srcset="img/animals__560x190.png">
+          <source media="(max-width: 700px)" srcset="img/animals__700x210.png">
           <img src="img/animals__300x200.png" alt="animals">
         </picture>
         <h1><a href="http://animals.pkopy.pl" target="_blank">ANIMALS</a></h1>
@@ -70,18 +70,24 @@
       </section>
       <section class="small__image" id="right">
         <picture>
-          <source media="(max-width: 400px)" srcset="img/sunflower__390x250.png">
+          <source media="(max-width: 400px)" srcset="img/sunflower__390x200.png">
           <source media="(max-width: 450px)" srcset="img/sunflower__450x220.png">
           <source media="(max-width: 565px)" srcset="img/sunflower__560x220.png">
-          <source media="(max-width: 640px)" srcset="img/sunflower__300x210.png">
-          <source media="(max-width: 700px)" srcset="img/sunflower__390x250.png">
+          <source media="(max-width: 640px)" srcset="img/sunflower__300x170.png">
+          <source media="(max-width: 700px)" srcset="img/sunflower__390x200.png">
           <img src="img/sunflower__300x200.png" alt="sunflower">
         </picture>
         <h1><a href="#">SUNFLOWER</a></h1>
       </section>
     </section>
     <footer>
-    
+      <p>
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=portfolio.pkopy.pl&profile=css3svg&usermedium=all&warning=1&vextwarning=">
+            <img style="border:0;width:88px;height:31px"
+                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="Poprawny CSS!" />
+            </a>
+        </p>
     </footer>
   </main>
   <script src="js/menu.js"></script>
