--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                 alt="Poprawny CSS!" />
             </a>
         </p>
+        <p>
+          zwykły test
+        </p>
     </footer>
   </main>
   <script src="js/menu.js"></script>
